--- a/back/package.json
+++ b/back/package.json
@@ -3,18 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "npm run services:up && npx prisma migrate dev && npx prisma db seed && tsx watch src/index.ts",
+    "services:down": "docker compose -f ./infra/docker-compose.yaml --env-file .env down",
+    "services:up": "docker compose -f ./infra/docker-compose.yaml --env-file .env up -d",
+    "seed": "ts-node prisma/seed.ts"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "5.22.0",
     "express": "4.21.1"
   },
   "devDependencies": {
     "@types/express": "5.0.0",
     "@types/node": "22.9.2",
+    "prisma": "5.22.0",
+    "ts-node": "10.9.2",
     "tsx": "4.19.2",
     "typescript": "5.7.2"
   }
