--- a/back/package.json
+++ b/back/package.json
@@ -17,10 +17,15 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "5.22.0",
-    "express": "4.21.1"
+    "bcryptjs": "2.4.3",
+    "express": "4.21.1",
+    "jsonwebtoken": "9.0.2",
+    "zod": "3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.6",
     "@types/express": "5.0.0",
+    "@types/jsonwebtoken": "9.0.7",
     "@types/node": "22.9.2",
     "prisma": "5.22.0",
     "ts-node": "10.9.2",
