--- a/front/package.json
+++ b/front/package.json
@@ -11,8 +11,10 @@
     "server": "json-server --watch db.json --port 3000"
   },
   "dependencies": {
+    "axios": "1.7.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hot-toast": "2.4.1",
     "react-icons": "5.3.0",
     "react-router-dom": "7.0.1"
   },
