--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "front": "cd front && npm run dev",
-    "back": "cd back && npm run dev"
+    "back": "cd back && npm run dev",
+    "server": "cd front && json-server --watch db.json --port 3000"
   },
   "keywords": [],
   "author": "",
